--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "vue-context": "^6.0.0",
+        "vue-simple-context-menu": "^3.3.0",
+        "vuetify": "^2.3.10"
     }
 }
